# ameba-rtos-pro2

./: .gitignore  .gitmodules  .gitreview  GitHub_release_note.txt  Jenkinsfile  README.md  auto_release.bat  auto_release.txt  release_note.docx  release_note_8710b.txt  release_note_8721d.txt  release_note_amebaz2.txt  setup.bat
project/realtek_amebapro2_v0_example/src/nn_post_process_pc_dev_tool/: CMakeLists.txt  readme.txt
project/realtek_amebapro2_v0_example/src/nn_post_process_pc_dev_tool/data/nanodet_data/: iter_0_attach_Transpose_Transpose_526_out0_0_out0_1_3598_112.tensor
project/realtek_amebapro2_v0_example/src/nn_post_process_pc_dev_tool/data/scrfd_data/: iter_0_attach_Reshape_Reshape_132_out0_3_out0_1_5760_4.tensor  iter_0_attach_Reshape_Reshape_136_out0_6_out0_1_5760_10.tensor  iter_0_attach_Reshape_Reshape_159_out0_4_out0_1_1440_4.tensor  iter_0_attach_Reshape_Reshape_163_out0_7_out0_1_1440_10.tensor  iter_0_attach_Reshape_Reshape_186_out0_5_out0_1_360_4.tensor  iter_0_attach_Reshape_Reshape_190_out0_8_out0_1_360_10.tensor  iter_0_attach_Sigmoid_Sigmoid_128_out0_0_out0_1_5760_1.tensor  iter_0_attach_Sigmoid_Sigmoid_155_out0_1_out0_1_1440_1.tensor  iter_0_attach_Sigmoid_Sigmoid_182_out0_2_out0_1_360_1.tensor
project/realtek_amebapro2_v0_example/src/nn_post_process_pc_dev_tool/data/yolo_data/: iter_0_output_30_65_out0_1_255_13_13.tensor  iter_0_output_37_76_out0_1_255_26_26.tensor
project/realtek_amebapro2_v0_example/src/nn_post_process_pc_dev_tool/data/yolov9_data/: iter_0_attach_Mul__model.22_Mul_out0_0_out0_1_4_3549.tensor  iter_0_attach_Sigmoid__model.22_Sigmoid_out0_1_out0_1_80_3549.tensor
project/realtek_amebapro2_v0_example/src/nn_post_process_pc_dev_tool/src/: img_render.c  img_render.h  main.c  model_nanodet_sim.c  model_nanodet_sim.h  model_scrfd_sim.c  model_scrfd_sim.h  model_yolo_sim.c  model_yolo_sim.h  model_yolov9_sim.c  model_yolov9_sim.h  nbg_reader.c  nbg_reader.h
(+1103 files in other folders)
